--- a/ElevenNote.Web/Views/Note/Index.cshtml
+++ b/ElevenNote.Web/Views/Note/Index.cshtml
@@ -41,7 +41,7 @@
             @Html.DisplayFor(modelItem => item.ModifiedUtc)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey }) |
             @Html.ActionLink("Details", "Details", new { id=item.NoteId }) |
             @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
         </td>
