--- a/ElevenNote.Web/Views/Shared/DisplayTemplates/Starred.cshtml
+++ b/ElevenNote.Web/Views/Shared/DisplayTemplates/Starred.cshtml
@@ -3,5 +3,7 @@
 
 <span>
     <i
-       class="glyphicon glyphicon-star-empty"></i>
+       class="glyphicon @(Model ? "glyphicon-star" : "glyphicon-star-empty")"
+       data-toggle="star"
+       data-id="@ViewBag.Id"></i>
 </span>
